@@ -23,6 +23,7 @@ v1.2.0 mmm dd, 2022
 * Added a way to clean sequence file in the sequence tab (see also command seqclean)
 * Added a warning when images are negative on calibration
 * Added calibration details in the FITS history
+* Added saving formulas (presets) in Pixel Math
 * Updated scripts to specify cosmetic correction is from masterdark with -cc=dark option
 * Updated seq file version to v4. Registration block keeps homography information
 * Refactored global registration and added 2pass and Apply Existing methods
